--- a/app/assets/stylesheets/show.css.scss
+++ b/app/assets/stylesheets/show.css.scss
@@ -49,6 +49,14 @@ body > div > div.yield-container > div > div > div.left-bar.col-md-2.col-md-offs
   float: left;
 }
 
+.faqs {
+  border: 1px solid pink;
+  margin: 10px 0px 0px 0px;
+  text-align: left;
+  padding: 15px 15px 15px 15px;
+  width: 800px;
+  float: left;
+}
 /*.detailed-info {
   border: 1px solid pink;
   margin: 10px 0px 0px 0px;
